--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block title %}Home{% endblock %} {% block content
 %}
 <h1>About Us</h1>
+<a href="{{ url_for('home') }}">Home</a>
 {% endblock %}
