--- a/templates/about.html
+++ b/templates/about.html
@@ -2,4 +2,11 @@
 %}
 <h1>About Us</h1>
 <a href="{{ url_for('home') }}">Home</a>
+
+<ul>
+    {% for member in team %}
+    <li>{{ member }}</li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
