--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,4 +2,51 @@
 %}
 <h1>Contact Us</h1>
 <a href="{{ url_for('home') }}">Home</a>
+
+<form method="POST" , action="">
+    {{ form.hidden_tag() }}
+    <p>
+        {{ form.name.label }}<br />
+        {{ form.name(size=32)}} <br />
+        {% for error in form.name.errors %}
+        <span style="color: red">{{ error }} </span>
+        {% endfor %}
+    </p>
+    <p>
+        {{ form.email.label }}<br />
+        {{ form.email(size=32)}} <br />
+        {% for error in form.email.errors %}
+        <span style="color: red">{{ error }} </span>
+        {% endfor %}
+    </p>
+    <p>
+        {{ form.message.label }}<br />
+        {{ form.message(size=32)}} <br />
+        {% for error in form.message.errors %}
+        <span style="color: red">{{ error }} </span>
+        {% endfor %}
+    </p>
+    <p>
+        {{ form.submit.label }}<br />
+        {{ form.submit() }} <br />
+        {% for error in form.submit.errors %}
+        <span style="color: red">{{ error }} </span>
+        {% endfor %}
+    </p>
+
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %}
+    <ul>
+        {% for category, message in messages %}
+        <li
+            style="color: {% if category == 'success' %}green{% else %}red{% endif %};"
+        >
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
+
+    <a href="{{ url_for('home') }}">Visit Home</a>
+</form>
 {% endblock %}
